# BricoBoy

./: .gitignore  Cargo.toml  README.md
myboy/: Cargo.toml
myboy/src/: emulator.rs  main.rs  screen.rs
myboy/src/cli/: args.rs
myboy/src/cpu/: addressing_mode.rs  condition.rs  cpu.rs  instruction.rs  mod.rs  register_set.rs  run_instruction.rs  state.rs
myboy/src/device/: device.rs  mem_map.rs  mod.rs
myboy/src/io/: ie_register.rs  if_register.rs  io.rs  io_registers.rs  lcldc_register.rs  mod.rs
myboy/src/io/interrupts/: ie_register.rs  if_register.rs  mod.rs
myboy/src/io/registers/: lcdc.rs  mod.rs  timers.rs
myboy/src/logger/: mod.rs
myboy/src/logging/: log.rs
myboy/src/memory/: generic_memory.rs  hram.rs  memory_map.rs  mod.rs  vram.rs  wram.rs
myboy/src/ppu/: mod.rs  oam.rs  object_attribute_memory.rs  ppu.rs  sprite.rs
myboy/src/ui/: app.rs  asm_text.rs  cpu_registers.rs  emulator_view.rs  io_registers.rs  mod.rs  serial_output.rs
myboy/src/ui/util/: cartridge_data.rs  mod.rs
mygbcartridge/: Cargo.toml
mygbcartridge/src/: cartridge.rs  enums.rs  lib.rs
mygbcartridge/src/enums/: cartridge_type.rs  gbc_support.rs  new_licensee_code.rs
